# c-templated-containers

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
examples/: queue_example.c  stack_example.c  vector_example.c
includes/: queue.h  stack.h  vector.h
tests/: test_queue.cc  test_stack.cc  test_vector.cc
